# SALIENT-TOOL

./: .gitignore  Dockerfile  LICENSE  README.md  SALIENT-GUI.key  pyproject.toml  requirements.txt
salient_src/: Fasttext-Model-prediction-on-safety-unseen-data.py  config.json  config2.json  fasttext_predicted_labels_test_dataset.csv  main.py  salient_gui_tkinter.py  template_gui_tkinter2.py  test-set.csv  text_issue.txt
