[tool.poetry]
name = "salient-src"
version = "0.1.0"
description = "SALIENT-TOOL"
authors = ["Sebastiano Panichella <spanichella@gmail.com>"]
license = "GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version."
readme = "README.md"
packages = [{include = "salient_src"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
