[tool.poetry]
name = "salient-src"
version = "0.1.0"
description = ""
authors = ["Sebastiano Panichella <spanichella@gmail.com>"]
license = "GPL 3"
readme = "README.md"
packages = [{include = "salient_src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
nltk = "3.7"
pandas = "1.4.2"
pysbd = "0.3.4"
spacy = "3.4.2"
numpy = "1.21.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
